fix more comments